--- a/index.html
+++ b/index.html
@@ -3,13 +3,12 @@
   <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>sitio meado</title>
+	<title>weird site</title>
 	<link rel="stylesheet" href="./styles.css">
   </head>
   <body>
 	<nav class="menu">
 	  <a class="link" href="./index.html">home</a>
-	  <a class="link" href="./gallery.html">gallery</a>
 	  <a class="link" href="./choons.html">choons</a>
 	</nav>
 	<header class="header">
