--- a/choons.html
+++ b/choons.html
@@ -17,7 +17,7 @@
 	<div>
 	  <figure>
 		<figcaption>prench fress</figcaption>
-		<audio>./res/</audio>
+		<audio controls src="./res/choons/prench_fress-001.mp3"</audio>
 	  </figure>
 	</div>
   </body>
