--- a/choons.html
+++ b/choons.html
@@ -16,8 +16,8 @@
 	</header>
 	<div>
 	  <figure>
-		<figcaption>prench fress</figcaption>
-		<audio controls src="./res/choons/prench_fress-001.mp3"</audio>
+		<figcaption class="title">prench fress</figcaption>
+		<audio class="track" controls src="./res/choons/prench_fress-001.mp3"</audio>
 	  </figure>
 	</div>
   </body>
