--- a/choons.html
+++ b/choons.html
@@ -11,13 +11,10 @@
 	  <a class="link" href="./index.html">home</a>
 	  <a class="link" href="./choons.html">choons</a>
 	</nav>
-	<header class="header">
-	  <h1 WHO LET ME COOK?>
-	</header>
-	<div>
-	  <figure>
-		<figcaption class="title">prench fress</figcaption>
-		<audio class="track" controls src="./res/choons/prench_fress-001.mp3"</audio>
+	<div class="tracks">
+	  <figure class="track">
+		<figcaption>prench fress</figcaption>
+		<audio controls src="./res/choons/prench_fress-001.mp3"</audio>
 	  </figure>
 	</div>
   </body>
